<resources>
    <string name="app_name">MyLibrary</string>
    <string name="etEmail">Introduza o Email!</string>
    <string name="etPassword">Introduza a Password!</string>
    <string name="btnLogin">Login</string>
    <string name="actLogin">Login</string>
    <string name="etEmailInválido">Email inválido</string>
    <string name="etPasswordInválida">Password inválida</string>
    <string name="bemVindo">Bem-vindo!</string>
    <string name="noInternet">Não existe ligação à Internet</string>
    <string name="btnRegistar">Registe-se aqui</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="ndOpen">Abrir</string>
    <string name="ndClose">Fechar</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="nav_catalogo">Catálogo</string>
    <string name="nav_requisicoes">Requisições</string>
    <string name="nav_perfil">Perfil</string>
    <string name="nav_alterar_dados">Perfil</string>
    <string name="nav_logout">Logout</string>
    <string name="nav_favoritos">Favoritos</string>

    <string name="menu_catalogo">Catálogo</string>
    <string name="detalhes_autor_estatico">de </string>
    <string name="detalhes_genero_estatico">Género:</string>
    <string name="detalhes_livro_detalhes">Detalhes:</string>
    <string name="menuPesquisa">Pesquisar Livro</string>
    <string name="nav_carrinho">Carrinho</string>
    <string name="nav_string_email">Email</string>
    <string name="dialog_tv_bib_de_levantamento">Bib. de levantamento</string>
    <string name="dialog_tv_finalizar_requisicao">Finalizar Requisição</string>
    <string name="dialog_btn_finalizar_requisicao">Finalizar Requisição</string>
    <string name="dialog_spinner_empty_error">Selecione a biblioteca de levantamento.</string>
    <string name="detalhes_estatico_isbn">ISBN:</string>
    <string name="detalhes_estatico_edicao">Edição:</string>
    <string name="detalhes_estatico_idioma">Idioma:</string>
    <string name="detalhes_estatico_formato">Formato:</string>
    <string name="detalhes_editora_estatico">Editora:</string>
    <string name="detalhes_biblioteca_estatico">Biblioteca:</string>
    <string name="detalhes_estatico_paginas">Páginas:</string>
    <string name="detalhes_estatico_sinopse">Sinopse:</string>
    <string name="menuFavorito">Adicionar aos favoritos</string>
    <string name="detalhes_livro_comentarios">Comentário(s):</string>
    <string name="hintAddComentario">Adicione um comentário</string>
    <string name="menu_comentarios">Comentários</string>
    <string name="campoBranco">Campo em branco!</string>
    <string name="telemovelInvalido">Nº de telemóvel inválido. Tem de conter 9 dígitos.</string>
    <string name="telemovelErroComecar">Nº de telemóvel tem de começar por 9</string>
    <string name="diaInvalido">Dia inválido. Insira um valor entre 1 e 31</string>
    <string name="mesInvalido">Mês inválido. Insira um valor entre 1 e 12.</string>
    <string name="anoInvalido">Ano inválido.</string>
    <string name="anoTerQuatroDigitos">Ano inválido. Tem de conter 4 dígitos.</string>
    <string name="nifInvalido">NIF inválido. Tem de conter 9 dígitos.</string>
    <string name="tituloRegistar">Registar</string>
    <string name="passOitoCaracteres">A palavra-passe tem de conter pelo menos 8 caracteres.</string>
    <string name="confirmPassError">Confirmação diferente da palavra-passe inserida.</string>
    <string name="loginInvalido">Login inválido</string>
    <string name="contaBloqueada">A conta encontra-se bloqueada!</string>
    <string name="registoInvalido">Registo inválido</string>
    <string name="registoSucesso">Registo realizado com sucesso!</string>
    <string name="editarDadosSucesso">Dados alterados com sucesso!</string>
    <string name="semFavoritos">Não existem favoritos!</string>
    <string name="livroAdicionado">Livro adicionado ao carrinho!</string>
    <string name="livroNoCarrinho">O livro já se encontra no seu carrinho</string>
    <string name="semComentarios">Não existem comentários!</string>
    <string name="carrinhoVazio">O carrinho está vazio</string>
    <string name="item_livro_detalhes_req_autor_estatico">de </string>
    <string name="detalhes_requisicao_num_req">Requisição</string>
    <string name="detalhes_requisicao_estado">Estado:</string>
    <string name="detalhes_requisicao_bib_levantamento">Biblioteca de levantamento:</string>
    <string name="detalhes_requisicao_dta_levantamento">Data levantamento:</string>
    <string name="detalhes_requisicao_dta_entrega">Data entrega:</string>
    <string name="cancelar_requisicao_nav_reqs">Cancelar Requisição</string>
</resources>